backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog-application
  labels:
    purpose: application
    environment: production
    team: backend
