backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-backend-deployment
  namespace: blog-application
  annotations:
    project.maintainer: "PRABESH MAGAR"
    project.repository: "mprabesh/CBD-3324-k8s-final"
    project.component: "backend"
spec:
  selector:
    matchLabels:
      version: v1           # Pod label to be used by Service to select the pods from this deployment
  replicas: 4                 # number of replica of the Pods
  template:
    metadata:
      labels:
        env: production         # Pod's label
        app: blog-backend
        version: v1
    spec:
      # Init container runs before the main application container
      containers:
      - name: blog-backend-container
        image: magarp0723/blogapp-backend:v3    # which image it will use
        ports:
        - containerPort: 8081     # Port exposed by container inside the Pod
